# deal

./: .coveragerc  .drone.star  .drone.yml  .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  README.rst  Taskfile.yml  benchmark.py  constraints.txt  ex.py  example.py  pyproject.toml  requirements-flake.txt  setup.cfg  setup.py  tests.py
.github/workflows/: main.yml
benchmarks/: __main__.py  _cli.py  _core.py  tests.yaml
contracts/: README.md  __init__.py  aliases.py  core.py  exceptions.py
deal/: __init__.py  __main__.py  _aliases.py  _cached_property.py  _cli.py  _colors.py  _exceptions.py  _imports.py  _introspection.py  _mem_test.py  _mypy.py  _schemes.py  _source.py  _sphinx.py  _state.py  _testing.py  _trace.py  _types.py  aliases.py  core.py  exceptions.py  mypy.py  schemes.py  state.py  testing.py  types.py
deal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deal/_cli/: __init__.py  _base.py  _common.py  _decorate.py  _lint.py  _main.py  _mem_test.py  _memtest.py  _prove.py  _stub.py  _test.py
deal/_decorators/: __init__.py  _contract.py  base.py  dispatch.py  ensure.py  example.py  has.py  inv.py  offline.py  post.py  pre.py  raises.py  reason.py  silent.py  validator.py
deal/_runtime/: __init__.py  _contract.py  _contracts.py  _decorators.py  _dispatch.py  _has_patcher.py  _inherit.py  _invariant.py  _validators.py
deal/_solver/: __init__.py  _annotations.py  _context.py  _eval_contracts.py  _eval_expr.py  _eval_stmt.py  _exceptions.py  _funcs.py  _registry.py  _sorts.py  _theorem.py  _transformer.py  _types.py
deal/_solver/_funcs/: __init__.py  _builtins.py  _list.py  _math.py  _os_path.py  _random.py  _registry.py  _str.py
deal/_solver/_proxies/: __init__.py  _float.py  _funcs.py  _int.py  _lambda.py  _list.py  _proxy.py  _registry.py  _set.py  _str.py
deal/introspection/: __init__.py  _extractor.py  _wrappers.py
deal/linter/: __init__.py  __main__.py  _checker.py  _cli.py  _contract.py  _error.py  _extractors.py  _func.py  _rules.py  _stub.py  _template.py  _transformer.py
deal/linter/_extractors/: __init__.py  asserts.py  common.py  contracts.py  definitions.py  examples.py  exceptions.py  exceptions_stubs.py  globals.py  imports.py  markers.py  pre.py  prints.py  result.py  returns.py  value.py
deal/linter/stubs/: aifc.json  asyncore.json  base64.json  bisect.json  bz2.json  calendar.json  cgi.json  codecs.json  configparser.json  copy.json  copyreg.json  crypt.json  dataclasses.json  datetime.json  difflib.json  dis.json  doctest.json  enum.json  filecmp.json  fileinput.json  fractions.json  ftplib.json  functools.json  getopt.json  getpass.json  gettext.json  glob.json  gzip.json  imaplib.json  imp.json  inspect.json  ipaddress.json  locale.json  lzma.json  macpath.json  mailbox.json  mailcap.json  nntplib.json  ntpath.json  nturl2path.json  (+48 more)
docs/: chaining.md  conf.py  disable.md  index.md  intro.md  linter.md  markers.md  recipes.md  requirements.txt  runtime.md  stubs.md  testing.md  tests.md  validators.md  values.md
docs-old/: disable.md  index.md
docs-old/commands/: lint.md  stub.md  test.md
docs-old/decorators/: chain.md  ensure.md  module_load.md
docs/basic/: crosshair.md  exceptions.md  index.md  intro.md  linter.md  motivation.md  refs.md  runtime.md  side-effects.md  tests.md  values.md  verification.md
docs/commands/: lint.md  stub.md  test.md
docs/decorators/: ensure.md  inv.md  offline.md  post.md  pre.md  pure.md  raises.md  reason.md  safe.md  silent.md
docs/details/: api.md  cli.md  contracts.md  dispatch.md  docs.md  examples.md  module_load.md  recipes.md  sphinx.md  stubs.md  tests.md  validators.md  verification.md
docs/new/: exceptions.md  intro.md  side-effects.md  values.md
docs/old/: requirements.txt  testing.md  validators.md
docs/old/commands/: lint.md
docs/source/: chaining.md  disable.md  exceptions.md  validators.md
docs/source/decorators/: chain.md  inv.md  offline.md  post.md  pre.md  pure.md  raises.md  safe.md  silent.md
examples/: choice.py  compiler.py  concat.py  count.py  div.py  format.py  fuzzing.py  fuzzing_atheris.py  fuzzing_pythonfuzz.py  index_of.py  min.py  printf.py  sphinx.py  using_hypothesis.py
examples/compiler/: __init__.py  _eval.py  _exec.py  _tokenizer.py  test_eval.py  test_exec.py  test_tokenizer.py
tests/: test_aliases.py  test_case.py  test_chain.py  test_docs.py  test_doctest.py  test_ensure.py  test_exceptions.py  test_imports.py  test_introspection.py  test_inv.py  test_main.py  test_marshmallow.py  test_mem_test.py  test_post.py  test_pre.py  test_raises.py  test_schemes.py  test_source.py  test_sphinx.py  test_state.py  test_static.py  test_testing.py  test_trace.py
tests/test_cli/: test_common.py  test_decorate.py  test_lint.py  test_main.py  test_mem_test.py  test_prove.py  test_stub.py  test_test.py
tests/test_decorators/: helpers.py  test_base.py  test_dispatch.py  test_ensure.py  test_example.py  test_has.py  test_inv.py  test_offline.py  test_post.py  test_pre.py  test_pure.py  test_raises.py  test_reason.py  test_safe.py  test_silent.py
tests/test_linter/: helpers.py  test_checker.py  test_cli.py  test_contract.py  test_deps.py  test_error.py  test_extractors.py  test_func.py  test_main.py  test_rules.py  test_stub.py  test_transformer.py
tests/test_linter/test_extractors/: test_asserts.py  test_common.py  test_contracts.py  test_definitions.py  test_examples.py  test_exceptions.py  test_exceptions_stubs.py  test_globals.py  test_imports.py  test_markers.py  test_pre.py  test_prints.py  test_result.py  test_returns.py
tests/test_runtime/: test_dispatch.py  test_ensure.py  test_example.py  test_has.py  test_inherit.py  test_inv.py  test_offline.py  test_post.py  test_pre.py  test_raises.py  test_reason.py  test_silent.py  test_validators.py
tests/test_solver/: helpers.py  test_annotations.py  test_expr.py  test_if.py  test_stdlib.py  test_stmt.py  test_subcalls.py  test_theorem.py
types/: types_dispatch.py  types_ensure.py  types_has.py  types_inherit.py  types_inv.py  types_post.py  types_pre.py  types_reason.py
(+339 files in other folders)
