[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = C408
exclude = setup.py

[egg_info]
egg_base = .

[tool:pytest]
addopts = --cov=deal --cov-report=html --cov-report=xml:coverage.xml --cov-report=term

# https://coverage.readthedocs.io/en/coverage-5.0.4/config.html
[coverage:run]
branch = True
omit =
    deal/linter/_template.py
plugins =
    coverage_conditional_plugin

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:

[coverage:coverage_conditional_plugin]
# Here we specify our pragma rules:
rules =
    "sys_version_info >= (3, 8)": py>=38
