[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = C408
exclude = setup.py

[egg_info]
egg_base = .

[tool:pytest]
addopts = --cov=deal

# https://coverage.readthedocs.io/en/coverage-5.0.4/config.html
[coverage:run]
branch = True
omit =
    deal/linter/_template.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
