[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = C408
exclude =
    setup.py
    venvs/

[egg_info]
egg_base = .

[tool:pytest]
addopts = --cov=deal --cov-report=html --cov-report=term-missing:skip-covered --cov-fail-under=100

# https://coverage.readthedocs.io/en/coverage-5.0.4/config.html
[coverage:run]
branch = True
omit =
    deal/linter/_template.py
    deal/__main__.py
    deal/linter/__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    pass
